--- a/MyApplication2/app/src/main/res/layout/activity_main2.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main2.xml
@@ -19,22 +19,24 @@
         app:srcCompat="@drawable/f1" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="8dp"
-        android:text="Button"
+        android:onClick="btn_like"
+        android:text="Like"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_dislike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
-        android:text="Button"
+        android:onClick="btn_dislike"
+        android:text="Dislike"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
